Removed obsolete code; moved some properties into DB